--- a/views/admin/productadd.ejs
+++ b/views/admin/productadd.ejs
@@ -117,6 +117,15 @@
                                     <label for="product_name" class="form-label">Product Name</label>
                                     <input type="text" placeholder="Type here" class="form-control" id="product_name"
                                         name="productName" />
+                                    <% if (typeof message !=='undefined' ) { %>
+
+                                        <h4 style="color: darkred;">
+                                            <%= message %>
+                                        </h4>
+
+
+
+                                        <% } %>
                                 </div>
                                 <div class="mb-4">
                                     <label class="form-label">Description</label>
@@ -128,7 +137,8 @@
                                         <div class="mb-4">
                                             <label class="form-label">Price</label>
                                             <div class="row gx-2">
-                                                <input placeholder="$" type="text" class="form-control" name="price" />
+                                                <input placeholder="$" type="text" class="form-contr dol"
+                                                    name="price" />
                                             </div>
                                         </div>
                                     </div>
@@ -140,7 +150,7 @@
                                     </div>
                                     <div class="col-lg-4">
                                         <label class="form-label">Category</label>
-                                        <!-- <input placeholder="" type="text"  name="Category" /> -->
+
                                         <select class="form-control" name="category">
                                             <% Category.forEach(category=>{ %>
                                                 <option>
