--- a/views/user/VerifyOtp2.ejs
+++ b/views/user/VerifyOtp2.ejs
@@ -19,7 +19,7 @@
         <h3>Enter OTP Code</h3>
         <form method="post">
             <div class="inputs">
-                <input type="hidden" name="email" value="<%= typeof email !== 'undefined' ? email : '' %>">
+                <input type="hidden" name="email" value="<%= email %>">
                 <input type="number" name="one">
                 <input type="number" name="two" disabled>
                 <input type="number" name="three" disabled>
