--- a/views/admin/User.ejs
+++ b/views/admin/User.ejs
@@ -126,7 +126,7 @@
                                     <th>N0s</th>
                                     <th scope="col">Name</th>
                                     <th scope="col">Email</th>
-                                    <!-- <th scope="col">Mobile</th> -->
+                                    <th scope="col">Mobile</th>
                                     <th scope="col">Status</th>
                                     <!-- <th scope="col">Date</th> -->
                                     <th scope="col" class="text-end">Action</th>
@@ -151,9 +151,9 @@
                                             <td>
                                                 <%= users[i].email%>
                                             </td>
-                                            <!-- <td>
+                                            <td>
                                                 <%= users[i].mobile%>
-                                            </td> -->
+                                            </td>
 
 
                                             <td class="text">
