--- a/views/user/registration.ejs
+++ b/views/user/registration.ejs
@@ -170,8 +170,13 @@
 
                                     <input type="email" class="form-control" id="email" name="email" value=""
                                         placeholder="Your Email">
-                                        
+
                                         <span id="emailError" class="error"></span>
+
+                                        <input type="text" class="form-control" id="mobile" name="mobile" value=""
+                                        placeholder="mobile number">
+
+
 
                                     <input type="password" class="form-control" id="password" name="password" value=""
                                         placeholder="Password">
