--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -59,8 +59,8 @@
 
                                     </div>
                                 </li>
-                              
-                               
+
+
 
                             </ul>
                         </div>
@@ -120,77 +120,47 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="left_sidebar_area">
-                        <!-- <aside class="left_widgets p_filter_widgets">
-                            <div class="l_w_title">
-                                <h3>Browse Categories</h3>
-                            </div>
-                            <div class="widgets_inner">
-                                <ul class="list">
-                                    <%if(Category.length>0){%>
-                                        <% for(let i=0 ; i< Category.length; i++){%>
 
-                                            <li>
-                                                <a href="/shop?categid=<%=Category[i].id%>">
-                                                    <%=Category[i].name%>
-                                                </a>
-                                               
-                                            </li>
-                                            <%}%>
-                                                <%}else{%>
 
-                                                    <li>
-                                                        <a href="#">there are not Categories</a>
-                                                        
-                                                    </li>
-                                                    <%}%>
-
-                                </ul>
-                            </div>
-                        </aside> -->
-
-                        <!-- <aside class="left_widgets p_filter_widgets">
+                        <aside class="left_widgets p_filter_widgets">
                             <div class="l_w_title">
                                 <h3>Product filters</h3>
                             </div>
                             <div class="widgets_inner">
                                 <ul class="list">
                                     <li>
-                                        <a href="#">Apple</a>
+                                        <a href="/shop">
+                                            <button type="button">SHOW ALL PRODUCTS</button>
+                                        </a>
                                     </li>
-                                    <li>
-                                        <a href="#">Asus</a>
-                                    </li>
-                                    <li class="active">
-                                        <a href="#">Gionee</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Micromax</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Samsung</a>
-                                    </li>
+
+                                    <%if(Categories.length>0){%>
+                                        <% for(let i=0 ; i< Categories.length; i++){%>
+
+                                            <li>
+                                                <a href="/shop?categid=<%=Categories[i].id%>">
+                                                    <button type="button">
+                                                        <%=Categories[i].name%>
+                                                    </button>
+
+                                                </a>
+
+                                            </li>
+                                            <%}%>
+                                                <%}else{%>
+
+                                                    <li>
+                                                        <a href="#">there are not Categories</a>
+
+                                                    </li>
+                                                    <%}%>
+
                                 </ul>
-                                <ul class="list">
-                                    <li>
-                                        <a href="#">Apple</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Asus</a>
-                                    </li>
-                                    <li class="active">
-                                        <a href="#">Gionee</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Micromax</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Samsung</a>
-                                    </li>
-                                </ul>
+
                             </div>
                         </aside>
 
-                        <aside class="left_widgets p_filter_widgets">
+                        <!-- <aside class="left_widgets p_filter_widgets">
                             <div class="l_w_title">
                                 <h3>Color Filter</h3>
                             </div>
@@ -239,7 +209,7 @@
                     </div>
                 </div>
                 <div class="col-lg-9">
-                    <!-- <div class="row">
+                    <div class="row">
                         <div class="col-lg-12">
                             <div class="product_top_bar d-flex justify-content-between align-items-center">
                                 <div class="single_product_menu">
@@ -275,7 +245,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                     <div class="breadcrumb_iner_item">
                         <h2>All products</h2>
                         <!-- <p>Home <span>-</span> Shop Category</p> -->
@@ -285,7 +255,9 @@
                             <% for(let i=0 ;i < products.length;i++){%>
                                 <div class="col-lg-4 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="/SharpImage/<%=products[i].image[1]%>" alt="img">
+                                        <a href="/single/?productId=<%= products[i]._id%>">
+                                            <img src="/SharpImage/<%=products[i].image[1]%>" alt="img">
+                                        </a>
                                         <div class="single_product_text">
                                             <h4>
                                                 <%=products[i].name%>
