--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -241,7 +241,7 @@
                                             class="fas fa-edit"></i> Edit Profile</a>
                                 </li>
                                 <li class="list-group-item">
-                                    <a href="#" class="text-decoration-none" onclick="toggleOrders()"><i
+                                    <a href="/order" class="text-decoration-none" ><i
                                             class="fas fa-file-alt"></i> Orders</a>
                                 </li>
                                 <li class="list-group-item">
@@ -566,6 +566,10 @@
                 userDetails.style.display = "block";
             }
         }
+
+        
+
+
     </script>
     <script>
         async function deleteAddress(addressId, index) {
