--- a/views/user/layouts/header.ejs
+++ b/views/user/layouts/header.ejs
@@ -40,58 +40,76 @@
                             <span class="menu_icon"><i class="fas fa-bars"></i></span>
                         </button>
 
+                        
+
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">Home</a>
-                                </li>
+
+
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_1"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Shop
+                                    <a class="nav-link" href="" id="navbarDropdown_1" role="button"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Home
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
-                                        
-                                        <a class="dropdown-item" href="/shop"> shop category</a>
-                           
-                                        
-                                     
-                                        <!-- <a class="dropdown-item" href="single-product.html">product details</a> -->
-                                        
+
+                                        <a class="dropdown-item" href="/home">Home</a>
+
+
+
+
                                     </div>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_3"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        pages
+                                    <a class="nav-link" href="blog.html" id="navbarDropdown_1" role="button"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Shop
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
+
+                                        <a class="dropdown-item" href="/shop"> shop category</a>
+
+
+
+
+                                    </div>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link " href="blog.html" id="navbarDropdown_3" role="button"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <% if(locals.user) { %>
+                                            logout
+                                            <% }else { %>
+                                                login
+                                                <% } %>
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                            <% if(locals.user) { %>
-                                                <a class="dropdown-item" href="/logout"> logout</a>
+                                        <% if(locals.user) { %>
+                                            <a class="dropdown-item" href="/logout"> logout</a>
                                             <% }else { %>
                                                 <a class="dropdown-item" href="/login"> login</a>
-                                             <% } %>
-                                       
+                                                <% } %>
 
 
-                                        <!-- <a class="dropdown-item" href="tracking.html">tracking</a>
+                                                    <!-- 
+                                        <a class="dropdown-item" href="tracking.html">tracking</a>
                                         <a class="dropdown-item" href="checkout.html">product checkout</a>
                                         <a class="dropdown-item" href="cart.html">shopping cart</a>
                                         <a class="dropdown-item" href="confirmation.html">confirmation</a>
                                         <a class="dropdown-item" href="elements.html">elements</a> -->
                                     </div>
                                 </li>
-                                <!-- <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_2"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        blog
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link " href="" id="navbarDropdown_2" role="button"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Profile
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                        <a class="dropdown-item" href="blog.html"> blog</a>
-                                        <a class="dropdown-item" href="single-blog.html">Single blog</a>
+                                        <a class="dropdown-item" href="/profile"> Profile</a>
+                                        <!-- <a class="dropdown-item" href="single-blog.html">Single blog</a> -->
                                     </div>
-                                </li> -->
-                                
+                                </li>
+
                                 <li class="nav-item">
                                     <!-- <a class="nav-link" href="">Logout</a> -->
                                 </li>
@@ -101,8 +119,8 @@
                             <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
                             <a href=""><i class="ti-heart"></i></a>
                             <div class="dropdown cart">
-                                <a class="dropdown-toggle" href="#" id="navbarDropdown3" role="button"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="dropdown-toggle" href="/cart" id="navbarDropdown3" role="button"
+                                   >
                                     <i class="fas fa-cart-plus"></i>
                                 </a>
                                 <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
