--- a/views/user/verifyOTP.ejs
+++ b/views/user/verifyOTP.ejs
@@ -11,7 +11,7 @@
     <title>OTP Verification Page</title>
 </head>
 
-<body onload="startTimer()">
+<body >
     <div class="container">
         <header>
             <img src="/img/shield.png" alt="icon">
@@ -26,7 +26,7 @@
                 <input type="number" name="four" disabled>
             </div>
 
-            <div id="timer">Time remaining: <span id="count">60</span> seconds</div>
+           
             <button class="btn">VERIFY OTP</button>
            
             
