--- a/views/admin/Categoriesadd.ejs
+++ b/views/admin/Categoriesadd.ejs
@@ -62,6 +62,13 @@
                     </a>
 
                 </li>
+                <li class="menu-item ">
+                    <a class="menu-link" href="/orderList">
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Orders</span>
+                    </a>
+
+                </li>
 
                 <br />
                 <br />
