--- a/views/admin/Dashboard.ejs
+++ b/views/admin/Dashboard.ejs
@@ -11,7 +11,7 @@
         <meta property="og:url" content="" />
         <meta property="og:image" content="" />
         <!-- Favicon -->
-        <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/theme/favicon.svg" />
+        <link rel="shortcut icon" type="image/x-icon" href="/imgs/theme/favicon.svg" />
         <!-- Template CSS -->
         <link href="css/main.css?v=1.1" rel="stylesheet" type="text/css" />
     </head>
@@ -21,7 +21,7 @@
         <aside class="navbar-aside" id="offcanvas_aside">
             <div class="aside-top">
                 <a href="index.html" class="brand-wrap">
-                    <img src="assets/imgs/theme/logo.svg" class="logo" alt="Nest Dashboard" />
+                    <img src="/imgs/theme/logo.svg" class="logo" alt="Nest Dashboard" />
                 </a>
                 <div>
                     <button class="btn btn-icon btn-aside-minimize"><i class="text-muted material-icons md-menu_open"></i></button>
@@ -29,47 +29,43 @@
             </div>
             <nav>
                 <ul class="menu-aside">
-                    <li class="menu-item active">
+                    <li class="menu-item">
                         <a class="menu-link" href="/dashboard">
                             <i class="icon material-icons md-home"></i>
                             <span class="text">Dashboard</span>
                         </a>
                     </li>
-
-
-                    <li class="menu-item  ">
-                        <a class="menu-link" href="/User">
-                            <i class="icon material-icons md-person"></i>
+                    <li class="menu-item ">
+                        <a class="menu-link" href="/user">
+                            <i class="icon material-icons md-shopping_bag"></i>
                             <span class="text">User</span>
                         </a>
-
+    
                     </li>
-
-
                     <li class="menu-item  ">
                         <a class="menu-link" href="/category">
-                            <i class="icon material-icons md-shopping_bag"></i>
-                            <span class="text">Categories</span>
+                            <i class="icon material-icons md-shopping_cart"></i>
+                            <span class="text">Catogoies</span>
                         </a>
-
+    
                     </li>
-
-
-                    <li class="menu-item  ">
+                    <li class="menu-item ">
                         <a class="menu-link" href="/product">
-                            <i class="icon material-icons md-shopping_bag"></i>
-                            <span class="text">product</span>
+                            <i class="icon material-icons md-shopping_cart"></i>
+                            <span class="text">Products</span>
                         </a>
-
+    
                     </li>
-
-
-
-                   
-                   
-                </ul>
-                <br />
-                <br /> 
+                    <li class="menu-item ">
+                        <a class="menu-link" href="/orderList">
+                            <i class="icon material-icons md-shopping_cart"></i>
+                            <span class="text">Orders</span>
+                        </a>
+    
+                    </li>
+    
+                    <br />
+                    <br />
             </nav>
         </aside>
         <main class="main-wrap">
@@ -106,10 +102,10 @@
                         <li class="dropdown nav-item">
                             <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" id="dropdownLanguage" aria-expanded="false"><i class="material-icons md-public"></i></a>
                             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownLanguage">
-                                <a class="dropdown-item text-brand" href="#"><img src="assets/imgs/theme/flag-us.png" alt="English" />English</a>
-                                <a class="dropdown-item" href="#"><img src="assets/imgs/theme/flag-fr.png" alt="Français" />Français</a>
-                                <a class="dropdown-item" href="#"><img src="assets/imgs/theme/flag-jp.png" alt="Français" />日本語</a>
-                                <a class="dropdown-item" href="#"><img src="assets/imgs/theme/flag-cn.png" alt="Français" />中国人</a>
+                                <a class="dropdown-item text-brand" href="#"><img src="/imgs/theme/flag-us.png" alt="English" />English</a>
+                                <a class="dropdown-item" href="#"><img src="/imgs/theme/flag-fr.png" alt="Français" />Français</a>
+                                <a class="dropdown-item" href="#"><img src="/imgs/theme/flag-jp.png" alt="Français" />日本語</a>
+                                <a class="dropdown-item" href="#"><img src="/imgs/theme/flag-cn.png" alt="Français" />中国人</a>
                             </div>
                         </li>
                         <li class="dropdown nav-item">
