--- a/views/admin/User.ejs
+++ b/views/admin/User.ejs
@@ -32,38 +32,41 @@
         <nav>
             <ul class="menu-aside">
                 <li class="menu-item">
-                    <a class="menu-link" href="/Dashboard">
+                    <a class="menu-link" href="/dashboard">
                         <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
                 </li>
-
-
-                <li class="menu-item  ">
-                    <a class="menu-link" href="/User">
-                        <i class="icon material-icons md-person"></i>
+                <li class="menu-item ">
+                    <a class="menu-link" href="/user">
+                        <i class="icon material-icons md-shopping_bag"></i>
                         <span class="text">User</span>
                     </a>
 
                 </li>
-
-
                 <li class="menu-item  ">
                     <a class="menu-link" href="/category">
-                        <i class="icon material-icons md-shopping_bag"></i>
-                        <span class="text">Categories</span>
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Catogoies</span>
                     </a>
 
                 </li>
-                <li class="menu-item  ">
+                <li class="menu-item ">
                     <a class="menu-link" href="/product">
-                        <i class="icon material-icons md-shopping_bag"></i>
-                        <span class="text">product</span>
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Products</span>
+                    </a>
+
+                </li>
+                <li class="menu-item ">
+                    <a class="menu-link" href="/orderList">
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Orders</span>
                     </a>
 
                 </li>
 
-
+                <br />
                 <br />
         </nav>
     </aside>
