--- a/views/admin/productadd.ejs
+++ b/views/admin/productadd.ejs
@@ -36,35 +36,38 @@
                         <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
-
-                <li class="menu-item  ">
-                    <a class="menu-link" href="/User">
-                        <i class="icon material-icons md-person"></i>
+                </li>
+                <li class="menu-item ">
+                    <a class="menu-link" href="/user">
+                        <i class="icon material-icons md-shopping_bag"></i>
                         <span class="text">User</span>
                     </a>
 
                 </li>
-
-
                 <li class="menu-item  ">
                     <a class="menu-link" href="/category">
-                        <i class="icon material-icons md-shopping_bag"></i>
-                        <span class="text">Categories</span>
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Catogoies</span>
                     </a>
 
                 </li>
-
-                <li class="menu-item  ">
+                <li class="menu-item ">
                     <a class="menu-link" href="/product">
-                        <i class="icon material-icons md-shopping_bag"></i>
-                        <span class="text">Product</span>
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Products</span>
+                    </a>
+
+                </li>
+                <li class="menu-item ">
+                    <a class="menu-link" href="/orderList">
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Orders</span>
                     </a>
 
                 </li>
 
-            </ul>
-            <br />
-            <br />
+                <br />
+                <br />
         </nav>
     </aside>
     <main class="main-wrap">
